--- a/PhicommK3/lede/.config
+++ b/PhicommK3/lede/.config
@@ -4249,7 +4249,7 @@ CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_libwebsockets-mbedtls is not set
 # CONFIG_PACKAGE_libwebsockets-openssl is not set
 # CONFIG_PACKAGE_libwrap is not set
-# CONFIG_PACKAGE_libwxbase is not set
+CONFIG_PACKAGE_libwxbase=yes
 # CONFIG_PACKAGE_libxerces-c is not set
 # CONFIG_PACKAGE_libxerces-c-samples is not set
 # CONFIG_PACKAGE_libxml2 is not set
