--- a/.github/workflows/d-team_newifi-d2.yml
+++ b/.github/workflows/d-team_newifi-d2.yml
@@ -131,7 +131,7 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "::set-output name=release_tag::K2P16-$(date +"%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::d-team_newifi-d2-$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "::set-output name=status::success"
 
